  Dopieralski)
* Added support for shared images (merged in Rainer Deyke's shared images code)
* Added support for masked bitmaps on tileset image imports
* Added support for highlighting tile under cursor
* Added support for creating an image snapshot of the map
* Added additional zoom levels (by Marc Ilgen)
* Added background color option (by Marc Ilgen)
/ Added documentation for the TMX format
* Added an option whether to automatically create tiles from tileset images
  upon import or not.
* Added support for reading TMX/TSX files from URLs
* Added the RandomBrush for doing 'spray-paint' painting (suggested
  by Rainer Deyke)
* Added the brush dialog, and support for a wide range of brush operations
  (Nephilim, Rainer Deyke, et al.)
* Added a message framework for reporting load/save problems to the user
* Improved GUI in several places
* Improved TMX loading, it is now much more forgiving
* Completed the Search/Replace dialog
* Changed the MultisetListRenderer to show tiles actual-size when selected
* Generalized the dialogs for properties and added delete capabilities.
* Fixed determining the relative path to tileset images
* Fixed some old things in the DTD (suggested by Radomir Dopieralski)
* Fixed drawing artifacts in selections
* Fixed Copy, Cut, and Paste menu options to be disabled when no map is loaded
* Fixed cancelling Save As operation still saving the map
* Fixed inverting selections

0.4.2 - October 14th, 2004

* Added a JNLP for WebStart, contributed by Chris Hazen
* Added a simple plugin for the Mappy FMAP format maps
* Added a plugin dialog for information about plugins
* Added plugin target for building bundled plugins
* Removed API usage deprecated by Java 5.0
* Fixed a NullPointerException when loading plugins
* Fixed layer naming on undo

0.4.1 - September 24th, 2004

* Added search/replace functionality
* Added tooltips to buttons
* Added map save/load plugin support
* Added marquee selections